<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuIntroducirPalabras"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/intro"/>
        <item
            android:id="@+id/menuConsultPalabras"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/consult"/>
        <item
            android:id="@+id/menuEjercicios"
            android:title="@string/test2">
            <menu>
                <item
                    android:id="@+id/ejercicioTipoTest"
                    android:icon="@drawable/dicc"
                    android:title="@string/ejerciciosTest"/>

                <item
                    android:id="@+id/ejercicioTipoFlecha"
                    android:icon="@drawable/dicc"
                    android:title="@string/ejerciciosFlechas"/>

                <item
                    android:id="@+id/ejercicioTipoComecocos"
                    android:icon="@drawable/dicc"
                    android:title="@string/ejercicioComecocos"/>
            </menu>
        </item>
        <!--<item
            android:id="@+id/menuEjercicios"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/test2"/>-->
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/otros">
        <menu>
            <item
                android:id="@+id/menuConfigPreferencias"
                android:icon="@drawable/dicc"
                android:title="@string/pref"/>

            <item
                android:id="@+id/realizarBackUp"
                android:icon="@drawable/dicc"
                android:title="@string/saveBU"/>

            <item
                android:id="@+id/resetBackUp"
                android:icon="@drawable/dicc"
                android:title="@string/resetBU"/>
        </menu>
    </item>
</menu>