<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.IntroducirPalabraAct"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_head"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="6dp"
        android:gravity="center"/>

    <!--PALABRA EN ESP-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/palabra_esp"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_weight="0.8"
            style="@style/GreenTextDark"/>

        <EditText
            android:id="@+id/intro_palabraESP"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/palab_hint_esp"
            android:layout_weight="1.2"
            style="@style/GreenTextLessDark"/>

    </LinearLayout>

    <!--PALABRA EN ENG-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/palabra_ing"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_weight="0.8"
            style="@style/GreenTextDark"/>

        <EditText
            android:id="@+id/intro_palabraENG"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/palab_hint_eng"
            android:layout_weight="1.2"
            style="@style/GreenTextLessDark"/>

    </LinearLayout>

    <!--TIPO PALABRA-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.80"
            android:text="@string/tipo_palab"
            android:textStyle="bold"
            android:textSize="14sp"
            style="@style/GreenTextDark"/>

        <EditText
            android:id="@+id/intro_palabraTIPO"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:hint="@string/palab_hint_tipo"
            style="@style/GreenTextLessDark"/>
    </LinearLayout>

    <Button
        android:id="@+id/insert_Entrada"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert"
        android:background="@color/verde_gris"
        android:textStyle="bold"
        style="@style/GreenTextLessDark"/>

</LinearLayout>