<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bienvenida"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        style="@style/GreenTextLessDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/introd_palabras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/GreenTextLessDark"
            android:text="@string/intro"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/consult_palabras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/GreenTextLessDark"
            android:text="@string/consult"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/test_palabras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/GreenTextLessDark"
            android:text="@string/test"
            android:textStyle="bold"/>

        <ImageView
            android:layout_marginBottom="5dp"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/dicc" />
    </LinearLayout>
    
</LinearLayout>