<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.diccionario.Activities.ConsultasActivity">

    <TextView
        style="GreenTextDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:background="@color/verde_gris"
        android:text="@string/consultas_head"
        android:textSize="25sp"
        android:textStyle="bold" />

    <!--PARTE MENÚ SUPERIOR-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@color/verde_gris2"
        android:weightSum="2">

        <!--MENÚ PARTE OPCIONAL-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_query"
                android:background="@color/verde_gris"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:text="@string/order1"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/Spinner_AlfaNumeric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:text="@string/order1"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/Spinner_Languaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:text="@string/order1"
                android:textSize="13sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/Spinner_PalabraExpresion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp" />

        </LinearLayout>

        <!--MENÚ PARTE BÚSQUEDA CONCRETA-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:textSize="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_query"
                android:background="@color/verde_gris"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_entry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/busqueda_palbExpr"
                android:textSize="15sp" />


        </LinearLayout>

    </LinearLayout><!--FIN MENÚ SUPERIOR-->

    <!--ALINEACIÓN BOTONES-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnParam"
            style="@style/GreenTextLessDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/btnbck"
            android:text="@string/busqueda"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCustom"
            style="@style/GreenTextLessDark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/btnbck"
            android:text="@string/busqueda"
            android:textStyle="bold" />
    </LinearLayout><!--FIN ALINEACIÓN BOTONES-->

    <!--PARTE DEL LISTADO-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:orientation="vertical">

        <!--A ESTA APRTE LE HAREMOS SCROLL-->
        <ListView
            android:id="@+id/listadoEntradas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" />

    </LinearLayout>
</LinearLayout>
