<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.diccionario.Activities.OpcionesPreferenciasAct">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titlePref"
        android:background="@drawable/btnbck"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_margin= "16dp"
        style="@style/GreenTextLessDark"/>

    <!--Opciones Número de preguntas y tiempo-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <!--Núm preguntas-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:weightSum="2">

            <TextView
                style="@style/GreenTextDark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/numTest"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/numPregTest"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout><!--FIN - Núm preguntas-->

        <!--Tiempo-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/segTest"
                android:textStyle="bold"
                android:textSize="14sp"
                style="@style/GreenTextDark"/>

            <Spinner
                android:id="@+id/numSegTest"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout><!--FIN - Núm Tiempo-->


    </LinearLayout> <!--FIN - Opciones Número de preguntas y tiempo-->
</LinearLayout>
